heimdall/heimdall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-svc
  namespace: homeserver
spec:
  selector:
    app: heimdall
  
  ports:
    - port: 80
      targetPort: 80
  
  type: ClusterIP
