heimdall/heimdall-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: heimdall
  namespace: homeserver

spec:
  parentRefs:
  - name: homeserver

  hostnames:
  - dashboard.homeserver.local

  rules:
  - backendRefs:
    - name: heimdall
      port: 80
